--- a/index.html
+++ b/index.html
@@ -14,31 +14,25 @@
       <nav class="header__menu">
         <ul class="header__links-list">
           <li class="header__links-list-item header__links-list-item_no-bullit">
-            <a class="header__link header__link_active " href="#0">главная</a>
+            <a class="header__link_active " href="#0">главная</a>
           </li>
           <li class="header__links-list-item">
-            <a class="header__link" href="#0">посмотреть лоты</a>
+            <a href="#0">посмотреть лоты</a>
           </li>
           <li class="header__links-list-item">
-            <a class="header__link" href="#0">об аукционе</a>
+            <a href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
         <a class="header__logo ">
             <img src="images/logo-black.svg" alt="Логотип Оно тебе надо">
           </a>
-        <address class="address">
-          <ul class="header__address ">
-            <li>
-              <a class="header__link" href="tel:+70000000">+9 999 555 5555</a>
-            </li>
-            <li>
-              <a class="header__link" href="mailto:mail@example.com">info@sobaka.ge</a>
-            </li>
-            <li>
-              <span>наб. Принсенграхт 263-<br>265, Амстердам</span>
-            </li>
-          </ul>
+        <address class="address header__address">
+          <a href="tel:+70000000">+9 999 555 5555</a>
+        <br>
+          <a href="mailto:mail@example.com">info@sobaka.ge</a>
+        <br>
+          <span>наб. Принсенграхт 263-<br>265, Амстердам</span>
         </address>
     </header>
     <main>
@@ -50,20 +44,20 @@
           <span class="aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span>
         </h1>
         <div class="cover__description">
-          <h2 class="cover__description-text">Аукцион вещей, в которые никто не верил</h2>
+          <p class="cover__description-text">Аукцион вещей, в которые никто не верил</p>
           <button class="bet-button">Сделать ставку</button>
         </div>
       </section>
       <section class="lots">
-        <h3 class="lots__heading">Лоты</h3>
+        <h2 class="lots__heading">Лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
             <a class="card-link" href="#0">
               <article class="card card_type_film">
                 <div class="overlay"></div>
-                <h4 class="card__title">
+                <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
-                </h4>
+                </h3>
                 <p class="card__text">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
                 </p>
@@ -74,9 +68,9 @@
             <a class="card-link" href="#0">
               <article class="card card_type_book">
                 <div class="overlay"></div>
-                <h4 class="card__title">
+                <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
-                </h4>
+                </h3>
                 <p class="card__text">
                   Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
                 </p>
@@ -87,9 +81,9 @@
             <a class="card-link" href="#0">
               <article class="card card_type_picture">
                 <div class="overlay"></div>
-                <h4 class="card__title">
+                <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
-                </h4>
+                </h3>
                 <p class="card__text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?
                 </p>
@@ -101,10 +95,10 @@
       </section>
       <section class="about">
         <div class="about__logo">
-          <img class="about__logo-image" src="/images/logo-white.svg" alt="Белый логотип оно тебе надо">
+          <img class="about__logo-image" src="images/logo-white.svg" alt="Белый логотип оно тебе надо">
         </div>
           <div class="about__column">
-          <h5 class="about__title">Об аукционе</h5>
+          <h4 class="about__title">Об аукционе</h4>
           <div class="about__text__indent">
           <p class="about__text ">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
           <p class="about__text ">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
@@ -115,17 +109,11 @@
     </main>
     <footer class="footer">
       <address class="address">
-        <ul class="footer__address ">
-          <li>
-            <a class="footer__link" href="tel:+70000000">+9 999 555 5555</a>
-          </li>
-          <li>
-            <a class="footer__link" href="mailto:mail@example.com">info@sobaka.ge</a>
-          </li>
-          <li>
-            <span>наб. Принсенграхт 263-<br>265, Амстердам</span>
-          </li>
-        </ul>
+        <a href="tel:+70000000">+9 999 555 5555</a>
+        <br>
+          <a href="mailto:mail@example.com">info@sobaka.ge</a>
+        <br>
+          <span>наб. Принсенграхт 263-<br>265, Амстердам</span>
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
@@ -140,25 +128,25 @@
           </li>
         </ul>
       </nav>
-      <nav class="footer__column">
+      <address class="footer__column">
         <ul class="footer__social-list">
           <li class="footer__social-list-item">
             <a href="#0" class="footer__social-link">
-              <img src="/images/yt.svg" alt="YouTube" class="footer__social-icon">
+              <img src="images/yt.svg" alt="YouTube" class="footer__social-icon">
             </a>
           </li>
           <li class="footer__social-list-item">
             <a href="#0" class="footer__social-link">
-              <img src="/images/vk.svg" alt="VK" class="footer__social-icon">
+              <img src="images/vk.svg" alt="VK" class="footer__social-icon">
             </a>
           </li>
           <li class="footer__social-list-item">
             <a href="#0" class="footer__social-link">
-              <img src="/images/pinterest.svg" alt="Pinterest" class="footer__social-icon">
+              <img src="images/pinterest.svg" alt="Pinterest" class="footer__social-icon">
             </a>
           </li>
         </ul>
-      </nav>
+      </address>
     </footer>
   </body>
 </html>
